Map 3 - New Assets
Street Light Import
Traffic Light Import
Power Line Import

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ User Created=False
 None=======
 
 [EditorStartup]
-LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
+LastLevel=/Game/ZTD_Blueprint/Maps/MapC
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1124,7 +1124,7 @@ LinuxTargetSettings="\"Object.Rendering.TargetedRHIs\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 Info=
-Info=
+Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget=
@@ -1269,9 +1269,9 @@ CurrentPosGridSize=1
 CurrentScalingGridSize=5
 
 [MRU]
-MRUItem0=/Game/ZTD_Blueprint/Maps/Menu_Main
-MRUItem1=/Game/ZTD_Blueprint/Maps/MapB
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapC
+MRUItem0=/Game/ZTD_Blueprint/Maps/MapC
+MRUItem1=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem2=/Game/ZTD_Blueprint/Maps/MapB
 MRUItem3=/Game/ZTD_Blueprint/Maps/Level_3
 MRUItem4=/Game/ZTD_Blueprint/Maps/ZTD_Main
 MRUItem5=/Game/ZTD_Blueprint/Maps/Protomap
@@ -1283,7 +1283,7 @@ bShowMobileStats=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Menu
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Maps
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -1307,9 +1307,9 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=-1272.000 Y=148.000
-ScreenPosition=X=-1360.000 Y=105.000
+ScreenPosition=X=20.000 Y=57.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1550.000 Y=860.000
+WindowSize=X=1580.000 Y=890.000
 None=======
 InitiallyMaximized=True
 
@@ -1332,7 +1332,7 @@ PrimType=1
 
 [Directories2]
 UNR=../../../../../Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
-UNR=../../../../../Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
+UNR=../../../../../UE4 Projects/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
 None=======
 BRUSH=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBX=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
