--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ User Created=False
 None=======
 
 [EditorStartup]
-LastLevel=/Game/ZTD_Blueprint/Maps/MapC
+LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1222,7 +1222,7 @@ None=======
 /Game/ZTD_Blueprint/Sounds/Music/Music3.Music3=1
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=MapCheck
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -1269,13 +1269,14 @@ CurrentPosGridSize=1
 CurrentScalingGridSize=5
 
 [MRU]
-MRUItem0=/Game/ZTD_Blueprint/Maps/MapC
-MRUItem1=/Game/ZTD_Blueprint/Maps/Menu_Main
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapB
-MRUItem3=/Game/ZTD_Blueprint/Maps/Level_3
-MRUItem4=/Game/ZTD_Blueprint/Maps/ZTD_Main
-MRUItem5=/Game/ZTD_Blueprint/Maps/Protomap
-MRUItem6=/Game/ZTD_Blueprint/Blueprints/Protomap
+MRUItem0=/Game/ZTD_Blueprint/Maps/MapC_U
+MRUItem1=/Game/ZTD_Blueprint/Maps/MapC
+MRUItem2=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem3=/Game/ZTD_Blueprint/Maps/MapB
+MRUItem4=/Game/ZTD_Blueprint/Maps/Level_3
+MRUItem5=/Game/ZTD_Blueprint/Maps/ZTD_Main
+MRUItem6=/Game/ZTD_Blueprint/Maps/Protomap
+MRUItem7=/Game/ZTD_Blueprint/Blueprints/Protomap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1309,7 +1310,7 @@ AssetPropertyPicker.CurrentViewType=0
 ScreenPosition=X=-1272.000 Y=148.000
 ScreenPosition=X=20.000 Y=57.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1580.000 Y=890.000
+WindowSize=X=1600.000 Y=910.000
 None=======
 InitiallyMaximized=True
 
