--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -29,7 +29,7 @@ LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
 NewWindowPosition=(X=379,Y=179)
 LastExecutedPlayModeType=PlayMode_InNewProcess
-LastExecutedPlayModeType=PlayMode_InNewProcess
+LastExecutedPlayModeType=PlayMode_InViewPort
 None=======
 
 [WidgetTemplatesExpanded]
@@ -47,7 +47,7 @@ User Created=False
 None=======
 
 [EditorStartup]
-LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U
+LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1085,6 +1085,12 @@ AudioComponent.ComponentReplication=True
 AudioComponent.Activation=True
 AudioComponent.Cooking=True
 AudioComponent.Events=True
+FoliageType_InstancedStaticMesh.Mesh=True
+FoliageType_InstancedStaticMesh.Painting=True
+FoliageType_InstancedStaticMesh.Placement=True
+FoliageType_InstancedStaticMesh.InstanceSettings=True
+FoliageType_InstancedStaticMesh.Scalability=True
+FoliageType_InstancedStaticMesh.Physics=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1101,8 +1107,8 @@ StaticMesh.ImportSettings=False
 [DetailPropertyExpansion]
 OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Object=
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1220,6 +1226,7 @@ None=======
 /Game/ZTD_Blueprint/Maps/Normal_Zombie_AI/AI_Controller.AI_Controller=1
 /Game/Blueprints/Music3.Music3=1
 /Game/ZTD_Blueprint/Sounds/Music/Music3.Music3=1
+/Game/Assets/Forest_Stuff/Meshes/Trees/SM_tree7.SM_tree7=1
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1269,9 +1276,9 @@ CurrentPosGridSize=1
 CurrentScalingGridSize=5
 
 [MRU]
-MRUItem0=/Game/ZTD_Blueprint/Maps/MapC_U
-MRUItem1=/Game/ZTD_Blueprint/Maps/MapC
-MRUItem2=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem0=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem1=/Game/ZTD_Blueprint/Maps/MapC_U
+MRUItem2=/Game/ZTD_Blueprint/Maps/MapC
 MRUItem3=/Game/ZTD_Blueprint/Maps/MapB
 MRUItem4=/Game/ZTD_Blueprint/Maps/Level_3
 MRUItem5=/Game/ZTD_Blueprint/Maps/ZTD_Main
@@ -1284,7 +1291,7 @@ bShowMobileStats=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Menu
-ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Maps
+ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -1310,7 +1317,7 @@ AssetPropertyPicker.CurrentViewType=0
 ScreenPosition=X=-1272.000 Y=148.000
 ScreenPosition=X=20.000 Y=57.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1600.000 Y=910.000
+WindowSize=X=1600.000 Y=940.000
 None=======
 InitiallyMaximized=True
 
@@ -1935,7 +1942,7 @@ Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=
 K2Node_VariableSet=
-StaticMesh=StaticMesh.LOD4.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD0.MeshBuildSettings,
+StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD4.MeshReductionSettings,
 FloatProperty=
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 
