AI fully working now.
might be a few bugs or so i missed but the towers and zombies should be
fully functional

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,7 +27,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@NIARAII
 LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
-NewWindowPosition=(X=379,Y=179)
+NewWindowPosition=(X=315,Y=143)
 LastExecutedPlayModeType=PlayMode_InNewProcess
 LastExecutedPlayModeType=PlayMode_InViewPort
 None=======
@@ -47,11 +47,19 @@ User Created=False
 None=======
 
 [EditorStartup]
-LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U_F
+LastLevel=/Game/ZTD_Blueprint/Maps/MapB
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 None=======
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Projectile.Projectile
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_Instance.ZTD_Instance
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_MainMenu_Mode.ZTD_MainMenu_Mode
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_GameMode.ZTD_GameMode
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Normal_Zombie_AI/Zombie_Character.Zombie_Character
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1094,6 +1102,40 @@ FoliageType_InstancedStaticMesh.Physics=True
 MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
+GrenadeTower_C.TransformCommon=True
+GrenadeTower_C.Rendering=True
+GrenadeTower_C.Input=True
+GrenadeTower_C.Actor=True
+RifleTower_C.TransformCommon=True
+RifleTower_C.Rendering=True
+RifleTower_C.Input=True
+RifleTower_C.Actor=True
+SniperTower_C.TransformCommon=True
+SniperTower_C.Rendering=True
+SniperTower_C.Input=True
+SniperTower_C.Actor=True
+Target_C.TransformCommon=True
+Target_C.Rendering=True
+Target_C.Input=True
+Target_C.Actor=True
+RifleTower_C.Default=True
+RifleTower_C.Tick=True
+RifleTower_C.Replication=True
+SniperTower_C.Default=True
+SniperTower_C.Tick=True
+SniperTower_C.Replication=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1113,7 +1155,7 @@ OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Ob
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1134,7 +1176,7 @@ LinuxTargetSettings="\"Object.Rendering.TargetedRHIs\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 Info=
-Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
+Info=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget=
@@ -1241,7 +1283,7 @@ None=======
 /Game/Assets/Forest_Stuff/Meshes/Trees/SM_tree3.SM_tree3=1
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=EditorErrors
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -1288,13 +1330,13 @@ CurrentPosGridSize=1
 CurrentScalingGridSize=5
 
 [MRU]
-MRUItem0=/Game/ZTD_Blueprint/Maps/MapC_U_F
-MRUItem1=/Game/ZTD_Blueprint/Maps/Protomap
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapC_U
-MRUItem3=/Game/ZTD_Blueprint/Maps/Menu_Main
-MRUItem4=/Game/ZTD_Blueprint/Maps/MapC
-MRUItem5=/Game/ZTD_Blueprint/Maps/ZTD_Main
-MRUItem6=/Game/ZTD_Blueprint/Maps/MapB
+MRUItem0=/Game/ZTD_Blueprint/Maps/MapB
+MRUItem1=/Game/ZTD_Blueprint/Maps/MapC_U_F
+MRUItem2=/Game/ZTD_Blueprint/Maps/Protomap
+MRUItem3=/Game/ZTD_Blueprint/Maps/MapC_U
+MRUItem4=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem5=/Game/ZTD_Blueprint/Maps/MapC
+MRUItem6=/Game/ZTD_Blueprint/Maps/ZTD_Main
 MRUItem7=/Game/ZTD_Blueprint/Maps/Level_3
 MRUItem8=/Game/ZTD_Blueprint/Blueprints/Protomap
 
@@ -1873,11 +1915,16 @@ StaticMeshEditor.TimeStamp=2017.03.14-04.22.00
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
+RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Target.Target;
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower;
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower;
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/GrenadeTower.GrenadeTower;
 RecentlyPlaced=/Game/Blueprints/Music3.Music3;
 RecentlyPlaced=/Game/Assets/Building_Asset_set_1/Street_environment_V01_City_building_011.Street_environment_V01_City_building_011;
 RecentlyPlaced=/Game/Assets/Building_Asset_set_1/Street_environment_V01_City_building_007.Street_environment_V01_City_building_007;
 RecentlyPlaced=/Game/Assets/RoadAssets/FreeRoadSet_2LanesTIntersection.FreeRoadSet_2LanesTIntersection;
-RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
 RecentlyPlaced=/Game/Assets/RoadAssets/FreeRoadSet_2LanesXIntersection.FreeRoadSet_2LanesXIntersection;
 RecentlyPlaced=/Game/Assets/RoadAssets/FreeRoadSet_2LanesTurn.FreeRoadSet_2LanesTurn;
 RecentlyPlaced=/Game/Assets/RoadAssets/FreeRoadSet_2Lanes.FreeRoadSet_2Lanes;
@@ -1919,7 +1966,7 @@ GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Inp
 GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
 Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
 InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
-RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
+RecastNavMesh=InputSettings.Bindings.ActionMappings.TestDamagePlayer,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MoveForward,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 NavigationSystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
 NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
 PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
@@ -1959,6 +2006,8 @@ StaticMesh=StaticMesh.LOD4.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSe
 FloatProperty=
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.TreePivotPainter,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+CapsuleComponent=CapsuleComponent.Collision.Collision,
+SphereComponent=SphereComponent.Collision.Collision,
 
 [SelectionDetails]
 PreserveScaleRatio=True
