--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -37,12 +37,12 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 					]\
 				),\
 				(\
-					"SizeCoefficient": 0.69999998807907104,\
+					"SizeCoefficient": 0.77115404605865479,\
 					"Type": "Splitter",\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
 						(\
-							"SizeCoefficient": 0.20413017272949219,\
+							"SizeCoefficient": 0.15000000596046448,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -73,7 +73,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.98934787511825562,\
+							"SizeCoefficient": 0.62962961196899414,\
 							"Type": "Stack",\
 							"HideTabWell": true,\
 							"ForegroundTab": "SlatePreview",\
@@ -85,7 +85,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.20677556097507477,\
+							"SizeCoefficient": 0.22037036716938019,\
 							"Type": "Stack",\
 							"HideTabWell": false,\
 							"ForegroundTab": "WidgetDetails",\
@@ -99,138 +99,10 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 					]\
 				),\
 				(\
-					"SizeCoefficient": 0.30000001192092896,\
+					"SizeCoefficient": 0.22884617745876312,\
 					"Type": "Splitter",\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
-						(\
-							"SizeCoefficient": 0.15000000596046448,\
-							"Type": "Stack",\
-							"HideTabWell": false,\
-							"ForegroundTab": "Animations",\
-							"Tabs": [\
-								(\
-									"TabId": "Animations",\
-									"TabState": "OpenedTab"\
-								)\
-							]\
-						),\
-						(\
-							"SizeCoefficient": 0.85000002384185791,\
-							"Type": "Stack",\
-							"HideTabWell": false,\
-							"ForegroundTab": "Sequencer",\
-							"Tabs": [\
-								(\
-									"TabId": "Sequencer",\
-									"TabState": "OpenedTab"\
-								),\
-								(\
-									"TabId": "CompilerResults",\
-									"TabState": "OpenedTab"\
-								)\
-							]\
-						)\
-					]\
-				)\
-			]\
-		)\
-	]\
-)
-WidgetBlueprintEditor_Graph_Layout_v1=(\
-	"Type": "Layout",\
-	"Name": "WidgetBlueprintEditor_Graph_Layout_v1",\
-	"PrimaryAreaIndex": 0,\
-	"Areas": [\
-		(\
-			"SizeCoefficient": 1,\
-			"Type": "Area",\
-			"Orientation": "Orient_Vertical",\
-			"WindowPlacement": "Placement_NoWindow",\
-			"Nodes": [\
-				(\
-					"SizeCoefficient": 0.18672099709510803,\
-					"Type": "Stack",\
-					"HideTabWell": true,\
-					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
-					"Tabs": [\
-						(\
-							"TabId": "AssetEditorToolkit_Toolbar",\
-							"TabState": "OpenedTab"\
-						)\
-					]\
-				),\
-				(\
-					"SizeCoefficient": 1,\
-					"Type": "Splitter",\
-					"Orientation": "Orient_Horizontal",\
-					"Nodes": [\
-						(\
-							"SizeCoefficient": 0.15000000596046448,\
-							"Type": "Splitter",\
-							"Orientation": "Orient_Vertical",\
-							"Nodes": [\
-								(\
-									"SizeCoefficient": 0.5,\
-									"Type": "Stack",\
-									"HideTabWell": false,\
-									"ForegroundTab": "MyBlueprint",\
-									"Tabs": [\
-										(\
-											"TabId": "MyBlueprint",\
-											"TabState": "OpenedTab"\
-										)\
-									]\
-								),\
-								(\
-									"SizeCoefficient": 0.5,\
-									"Type": "Stack",\
-									"HideTabWell": false,\
-									"ForegroundTab": "Inspector",\
-									"Tabs": [\
-										(\
-											"TabId": "Inspector",\
-											"TabState": "OpenedTab"\
-										)\
-									]\
-								)\
-							]\
-						),\
-						(\
-							"SizeCoefficient": 0.69999998807907104,\
-							"Type": "Splitter",\
-							"Orientation": "Orient_Vertical",\
-							"Nodes": [\
-								(\
-									"SizeCoefficient": 0.80000001192092896,\
-									"Type": "Stack",\
-									"HideTabWell": false,\
-									"ForegroundTab": "Document : 2",\
-									"Tabs": [\
-										(\
-											"TabId": "Document",\
-											"TabState": "ClosedTab"\
-										)\
-									]\
-								),\
-								(\
-									"SizeCoefficient": 0.20000000298023224,\
-									"Type": "Stack",\
-									"HideTabWell": false,\
-									"ForegroundTab": "CompilerResults",\
-									"Tabs": [\
-										(\
-											"TabId": "CompilerResults",\
-											"TabState": "OpenedTab"\
-										),\
-										(\
-											"TabId": "FindResults",\
-											"TabState": "ClosedTab"\
-										)\
-									]\
-								)\
-							]\
-						),\
 						(\
 							"SizeCoefficient": 0.15000000596046448,\
 							"Type": "Stack",\
@@ -238,7 +110,23 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 							"ForegroundTab": "None",\
 							"Tabs": [\
 								(\
-									"TabId": "PaletteList",\
+									"TabId": "Animations",\
+									"TabState": "ClosedTab"\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.85000002384185791,\
+							"Type": "Stack",\
+							"HideTabWell": false,\
+							"ForegroundTab": "None",\
+							"Tabs": [\
+								(\
+									"TabId": "Sequencer",\
+									"TabState": "ClosedTab"\
+								),\
+								(\
+									"TabId": "CompilerResults",\
 									"TabState": "ClosedTab"\
 								)\
 							]\
@@ -249,6 +137,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 		)\
 	]\
 )
+WidgetBlueprintEditor_Graph_Layout_v1=( 	"Type": "Layout", 	"Name": "WidgetBlueprintEditor_Graph_Layout_v1", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.18672099709510803, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 1, 					"Type": "Splitter", 					"Orientation": "Orient_Horizontal", 					"Nodes": [ 						( 							"SizeCoefficient": 0.15000000596046448, 							"Type": "Splitter", 							"Orientation": "Orient_Vertical", 							"Nodes": [ 								( 									"SizeCoefficient": 0.5, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "MyBlueprint", 									"Tabs": [ 										( 											"TabId": "MyBlueprint", 											"TabState": "OpenedTab" 										) 									] 								), 								( 									"SizeCoefficient": 0.5, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "Inspector", 									"Tabs": [ 										( 											"TabId": "Inspector", 											"TabState": "OpenedTab" 										) 									] 								) 							] 						), 						( 							"SizeCoefficient": 0.69999998807907104, 							"Type": "Splitter", 							"Orientation": "Orient_Vertical", 							"Nodes": [ 								( 									"SizeCoefficient": 0.80000001192092896, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "Document : 6", 									"Tabs": [ 										( 											"TabId": "Document", 											"TabState": "ClosedTab" 										) 									] 								), 								( 									"SizeCoefficient": 0.20000000298023224, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "CompilerResults", 									"Tabs": [ 										( 											"TabId": "CompilerResults", 											"TabState": "OpenedTab" 										), 										( 											"TabId": "FindResults", 											"TabState": "ClosedTab" 										) 									] 								) 							] 						), 						( 							"SizeCoefficient": 0.15000000596046448, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "None", 							"Tabs": [ 								( 									"TabId": "PaletteList", 									"TabState": "ClosedTab" 								) 							] 						) 					] 				) 			] 		) 	] )
 "ForegroundTab": "Document : 3",=======
 Standalone_BlackboardEditor_Layout_v1=( 	"Type": "Layout", 	"Name": "Standalone_BlackboardEditor_Layout_v1", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.10000000149011612, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 1, 					"Type": "Splitter", 					"Orientation": "Orient_Horizontal", 					"Nodes": [ 						( 							"SizeCoefficient": 1, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "BehaviorTreeEditor_BlackboardEditor", 							"Tabs": [ 								( 									"TabId": "BehaviorTreeEditor_BlackboardEditor", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 1, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "BehaviorTreeEditor_BlackboardProperties", 							"Tabs": [ 								( 									"TabId": "BehaviorTreeEditor_BlackboardProperties", 									"TabState": "OpenedTab" 								) 							] 						) 					] 				) 			] 		) 	] )
 
