--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -29,7 +29,7 @@ LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
 NewWindowPosition=(X=379,Y=179)
 LastExecutedPlayModeType=PlayMode_InNewProcess
-LastExecutedPlayModeType=PlayMode_InNewProcess
+LastExecutedPlayModeType=PlayMode_Simulate
 None=======
 
 [WidgetTemplatesExpanded]
@@ -47,15 +47,21 @@ User Created=False
 None=======
 
 [EditorStartup]
-LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
+LastLevel=/Game/ZTD_Blueprint/Maps/MapB
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 None=======
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/Sniper_Projectile.Sniper_Projectile
 OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/TowerProjectile.TowerProjectile
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Projectile.Projectile
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Base.Base
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Target.Target
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/Sniper_Projectile.Sniper_Projectile
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/GrenadeTower.GrenadeTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1232,6 +1238,15 @@ Sniper_Projectile_C.Rendering=True
 Sniper_Projectile_C.Replication=True
 Sniper_Projectile_C.Input=True
 Sniper_Projectile_C.Actor=True
+SniperTower_C.TransformCommon=True
+RifleTower_C.TransformCommon=True
+Target_C.Tick=True
+Target_C.Rendering=True
+Target_C.Replication=True
+Target_C.Input=True
+Target_C.Actor=True
+GrenadeTower_C.TransformCommon=True
+Grenade_C.TransformCommon=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1335,6 +1350,12 @@ REINST_Zombie_Character_C_336="\"Object.Character.Mesh.Object.Collision.BodyInst
 REINST_Zombie_Character_C_344="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_Zombie_Character_C_352="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_Zombie_Character_C_360="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ZTD_Blueprint/Blueprints/Game_UI/Pause_menu.Pause_menu=0
@@ -1389,6 +1410,8 @@ None=======
 /Game/ZTD_Blueprint/Blueprints/SniperTower/Tower1_Base.Tower1_Base=0
 /Game/ZTD_Blueprint/Blueprints/RifleTower/Tower1_Gun.Tower1_Gun=0
 /Game/ZTD_Blueprint/Blueprints/RifleTower/TowerProjectile.TowerProjectile=0
+/Game/ZTD_Blueprint/Blueprints/SniperTower/Tower1_Gun.Tower1_Gun=0
+/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower=1
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1439,8 +1462,8 @@ CurrentPosGridSize=1
 CurrentScalingGridSize=5
 
 [MRU]
-MRUItem0=/Game/ZTD_Blueprint/Maps/Menu_Main
-MRUItem1=/Game/ZTD_Blueprint/Maps/MapB
+MRUItem0=/Game/ZTD_Blueprint/Maps/MapB
+MRUItem1=/Game/ZTD_Blueprint/Maps/Menu_Main
 MRUItem2=/Game/ZTD_Blueprint/Maps/MapC_U_F
 MRUItem3=/Game/ZTD_Blueprint/Maps/Protomap
 MRUItem4=/Game/ZTD_Blueprint/Maps/MapC_U
@@ -2024,11 +2047,14 @@ StaticMeshEditor.TimeStamp=2017.03.14-04.22.00
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/GrenadeTower.GrenadeTower;
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade;
+RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower;
 RecentlyPlaced=/Game/Blueprints/Music3.Music3;
 RecentlyPlaced=/Game/Assets/Building_Asset_set_1/Street_environment_V01_City_building_011.Street_environment_V01_City_building_011;
 RecentlyPlaced=/Game/Assets/Building_Asset_set_1/Street_environment_V01_City_building_007.Street_environment_V01_City_building_007;
 RecentlyPlaced=/Game/Assets/RoadAssets/FreeRoadSet_2LanesTIntersection.FreeRoadSet_2LanesTIntersection;
-RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
 RecentlyPlaced=/Game/Assets/RoadAssets/FreeRoadSet_2LanesXIntersection.FreeRoadSet_2LanesXIntersection;
 RecentlyPlaced=/Game/Assets/RoadAssets/FreeRoadSet_2LanesTurn.FreeRoadSet_2LanesTurn;
 RecentlyPlaced=/Game/Assets/RoadAssets/FreeRoadSet_2Lanes.FreeRoadSet_2Lanes;
@@ -2106,14 +2132,14 @@ Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=
 K2Node_VariableSet=
-StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD4.MeshReductionSettings,
+StaticMesh=StaticMesh.LOD4.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD0.MeshBuildSettings,
 FloatProperty=
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.TreePivotPainter,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 Landscape=Landscape.Collision.Collision,
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
